; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_table_algo.c_compare_ifidx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_table_algo.c_compare_ifidx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifidx = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @compare_ifidx(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.ifidx*, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i64*
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %7, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to %struct.ifidx*
  store %struct.ifidx* %12, %struct.ifidx** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load %struct.ifidx*, %struct.ifidx** %6, align 8
  %15 = getelementptr inbounds %struct.ifidx, %struct.ifidx* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp slt i64 %13, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %28

19:                                               ; preds = %2
  %20 = load i64, i64* %7, align 8
  %21 = load %struct.ifidx*, %struct.ifidx** %6, align 8
  %22 = getelementptr inbounds %struct.ifidx, %struct.ifidx* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp sgt i64 %20, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %19
  store i32 1, i32* %3, align 4
  br label %28

26:                                               ; preds = %19
  br label %27

27:                                               ; preds = %26
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %25, %18
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
